--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "dev": "npm run dev:windows",
+    "dev:windows": "set NODE_OPTIONS=--import ./instrument.server.mjs && react-router dev",
+    "start": "set NODE_OPTIONS=--import ./instrument.server.mjs && react-router-serve ./build/server/index.js",
     "build": "react-router build",
-    "dev": "react-router dev",
-    "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@react-router/node": "^7.7.1",
     "@react-router/serve": "^7.7.1",
+    "@sentry/profiling-node": "^10.12.0",
+    "@sentry/react-router": "^10.12.0",
     "@syncfusion/ej2-base": "^31.1.17",
     "@syncfusion/ej2-react-buttons": "^31.1.17",
     "@syncfusion/ej2-react-charts": "^31.1.19",
@@ -34,6 +38,7 @@
     "@types/node": "^20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "cross-env": "^7.0.3",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
     "vite": "^6.3.3",
